@@ -1,5 +1,10 @@
 2016-09-26 Albert Chu <chu11@llnl.gov>
 
+	* ipmipower/ipmipower_powercmd.c (ipmipower_powercmd_queue): Fix
+	initialization of variables in wrong branch.
+
+2016-09-26 Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/util/ipmi-util.c (ipmi_get_random): Remove call to
 	gcry_randomize.  There's no guarantee gcrypt was initialized.
 
